<resources>
	<string name="app_name">Visualize</string>
	<string name="action_settings">Settings</string>

	<string name="checkbox_summary_off">Hidden</string>
	<string name="checkbox_summary_on">Shown</string>

	<string name="pref_show_bass_label">Show Bass</string>
	<string name="pref_show_bass_key" translatable="false">show_bass</string>

	<string name="pref_show_treble_label">Show Treble</string>
	<string name="pref_show_treble_key" translatable="false">show_treble</string>

	<string name="pref_show_mid_label">Show Mid-</string>
	<string name="pref_show_mid_key" translatable="false">show_mid</string>

	<string name="pref_color_label">Shape Color</string>

	<string name="pref_color_label_red">Red</string>
	<string name="pref_color_label_blue">Blue</string>
	<string name="pref_color_label_green">Green</string>

	<string name="pref_color_key" translatable="false">color</string>

	<string name="pref_color_red_value" translatable="false">red</string>
	<string name="pref_color_blue_value" translatable="false">blue</string>
	<string name="pref_color_green_value" translatable="false">green</string>

	<string name="pref_size_default" translatable="false">1</string>
	<string name="pref_size_key">shape_size</string>
	<string name="pref_size_label">Shape Size</string>
</resources>