<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference
			android:defaultValue="@bool/pref_show_bass_default"
			android:key="@string/pref_show_bass_key"
			android:summaryOff="@string/checkbox_summary_off"
			android:summaryOn="@string/checkbox_summary_on"
			android:title="pref_show_bass_label" />

	<CheckBoxPreference
			android:defaultValue="@bool/pref_show_treble_default"
			android:key="@string/pref_show_treble_key"
			android:summaryOff="@string/checkbox_summary_off"
			android:summaryOn="@string/checkbox_summary_on"
			android:title="pref_show_treble_label" />

	<CheckBoxPreference
			android:defaultValue="@bool/pref_show_mid_default"
			android:key="@string/pref_show_mid_key"
			android:summaryOff="@string/checkbox_summary_off"
			android:summaryOn="@string/checkbox_summary_on"
			android:title="pref_show_mid_label" />
</PreferenceScreen>